--- a/template/css/style.css
+++ b/template/css/style.css
@@ -34,7 +34,7 @@ input[type="submit"],input[type="reset"],.w3layouts_mail_grid_left2 a,.w3agile_s
 }
 /*-- banner --*/
 .banner{
-	background:url(../images/banner.jpg) no-repeat 0px 0px;
+	background:url(img/banner3.jpg) no-repeat 0px 0px;
 	background-size:cover;
 	-webkit-background-size:cover;
 	-moz-background-size:cover;
@@ -695,7 +695,7 @@ p.w3agile {
 	bottom: 20px;
 	right: 2%;
 	overflow: hidden;
-	z-index: 9999; 
+	z-index: 9999;
 	width: 32px;
 	height: 28px;
 	border: none;
@@ -733,7 +733,7 @@ p.w3agile {
     -ms-transition: 0.5s all;
     -moz-transition: 0.5s all;
     cursor: pointer;
-} 
+}
 .icon-box:hover {
     background: #000;
 	transition:0.5s all;
@@ -752,11 +752,11 @@ p.w3agile {
     float: left;
     width: 12.5%;
     height: 115px;
-    padding: 10px; 
+    padding: 10px;
     line-height: 1.4;
-    text-align: center;  
+    text-align: center;
     font-size: 12px;
-    list-style-type: none;	
+    list-style-type: none;
 }
 .codes .bs-glyphicons .glyphicon {
     margin-top: 5px;
@@ -774,7 +774,7 @@ p.w3agile {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 	color: #777;
-} 
+}
 .codes .bs-glyphicons .glyphicon-class {
     display: block;
     text-align: center;
@@ -831,7 +831,7 @@ h3.agileits-icons-title {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 	color: #777;
-} 
+}
 .bs-glyphicons .glyphicon-class {
     display: block;
     text-align: center;
@@ -942,7 +942,7 @@ li.list-group-item1 {
 .label {
 	font-weight: 300 !important;
 	border-radius:4px;
-}  
+}
 .grid_5{
 	background:none;
 	padding:2em 0;
@@ -2608,7 +2608,7 @@ p.w3layouts_para {
 .agile_services_grid {
     text-align: center;
     padding: 0;
-} 
+}
 .choose {
     padding: 2em 0;
 }
@@ -2639,4 +2639,50 @@ p.w3layouts_para {
 .map iframe {
     min-height: 250px;
 }
+}
+
+
+
+
+#logo {
+    height: 100px;
+}
+
+#header-title {
+    color:#fff;
+    font-size: 1rem;
+    margin-left: 40px;
+}
+
+
+#logo,#header-title {
+    margin-left: 60px;
+}
+
+.fees {
+    display: flex;
+flex-direction: column;
+
+}
+
+.fees p {
+
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin-left: 800px;
+    margin-right: 800px;
+    line-height: 30px;
+}
+
+#logo-title {
+    margin-left: 20px;
+}
+
+#testim {
+    color: #DCDCDC;
+}
+
+.contact {
+    background-color: #DCDCDC;
 }
