--- a/css/owl.carousel.css
+++ b/css/owl.carousel.css
@@ -1,5 +1,5 @@
 /*
-* 	Owl Carousel Owl Demo Theme 
+* 	Owl Carousel Owl Demo Theme
 *	v1.24
 */
     #owl-demo .item{
@@ -10,7 +10,7 @@
     margin: 0 auto;
 	    text-align: center;
     margin: 0 auto;
-   
+
     }
 
 .owl-theme .owl-controls {
@@ -67,7 +67,7 @@
 	-webkit-border-radius: 20px;
 	-moz-border-radius: 20px;
 	border-radius: 20px;
-	background:#2ad2c9;
+	background:#DCDCDC;
 }
 
 .owl-theme .owl-controls .owl-page.active span,
@@ -94,7 +94,7 @@
 	min-height: 150px;
 	background: url(AjaxLoader.gif) no-repeat center center
 }
-/* 
+/*
  * 	Core Owl Carousel CSS File
  *	v1.24
  */
@@ -134,7 +134,7 @@
 	-o-transition: height 500ms ease-in-out;
 	transition: height 500ms ease-in-out;
 }
-	
+
 .owl-carousel .owl-item{
 	float: left;
 }
@@ -152,7 +152,7 @@
 }
 
 /* mouse grab icon */
-.grabbing { 
+.grabbing {
     cursor:url(grabbing.png) 8 8, move;
 }
 
