--- a/css/style.css
+++ b/css/style.css
@@ -2707,3 +2707,11 @@ flex-direction: column;
     color:#fff;
 
 }
+
+.w3ls-social-icons h3 {
+  text-align: center;
+}
+
+.w3ls-social-icons {
+  text-align: center;
+}
