--- a/css/style.css
+++ b/css/style.css
@@ -713,7 +713,8 @@ p.w3agile {
 	height: 28px;
 	border: none;
 	text-indent: 100%;
-	background: url(../images/move-top.png) no-repeat -3px 3px;
+	/*background: url(../images/move-top.png) no-repeat -3px 3px;*/
+	background: url(../images/uparrow.png) no-repeat -3px 3px;
 }
 #toTopHover {
 	width: 32px;
